[gd_scene load_steps=12 format=3 uid="uid://b6pqub26nues0"]

[ext_resource type="Script" path="res://objects/ui/teleport_control.gd" id="1_bhoop"]
[ext_resource type="Script" path="res://objects/ui/TeleportingLabelDots.gd" id="2_evy21"]
[ext_resource type="Script" path="res://objects/ui/TeleportingLabelTimeRemain.gd" id="2_lv4u7"]

[sub_resource type="Gradient" id="Gradient_751qq"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_otoyr"]
gradient = SubResource("Gradient_751qq")
fill_from = Vector2(0.5, 0.9)
fill_to = Vector2(0.5, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_f47rm"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(640, 1, 1)
angle_min = -81.8
direction = Vector3(0, -1, 0)
spread = 6.136
initial_velocity_min = 272.72
initial_velocity_max = 375.0
angular_velocity_min = 49.09
angular_velocity_max = 114.54
gravity = Vector3(0, 98, 0)

[sub_resource type="Gradient" id="Gradient_qyqkm"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_8nmrh"]
gradient = SubResource("Gradient_qyqkm")
fill_from = Vector2(0.25, 0.62963)

[sub_resource type="LabelSettings" id="LabelSettings_fem8v"]
font_size = 60
font_color = Color(0, 0, 0, 1)
outline_size = 12

[sub_resource type="LabelSettings" id="LabelSettings_wlgrg"]
font_size = 40
font_color = Color(0, 0, 0, 1)
outline_size = 12
outline_color = Color(0.65098, 0.65098, 0.65098, 1)

[sub_resource type="LabelSettings" id="LabelSettings_tm13j"]
font_size = 60
font_color = Color(0, 0, 0, 1)
outline_size = 12
outline_color = Color(0.65098, 0.65098, 0.65098, 1)

[node name="TeleportControl" type="Control"]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_bhoop")

[node name="BlackScreen" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_otoyr")

[node name="TeleportParticles" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.0509804)
position = Vector2(640, 717)
emitting = false
amount = 64
process_material = SubResource("ParticleProcessMaterial_f47rm")
texture = SubResource("GradientTexture2D_8nmrh")
lifetime = 8.0

[node name="TeleportingLabelTitle" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -327.0
offset_top = -49.0
offset_right = 328.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
text = "Traveling To Surface"
label_settings = SubResource("LabelSettings_fem8v")
horizontal_alignment = 1

[node name="TeleportingLabelDots" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 298.0
offset_top = -49.0
offset_right = 349.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
text = "..."
label_settings = SubResource("LabelSettings_fem8v")
script = ExtResource("2_evy21")

[node name="TeleportingLabelDepthRemainTitle" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = 81.0
offset_right = 65.0
offset_bottom = 164.0
grow_horizontal = 2
grow_vertical = 2
text = "Depth:"
label_settings = SubResource("LabelSettings_wlgrg")

[node name="TeleportingLabelDepthRemain" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = 123.0
offset_right = 49.0
offset_bottom = 206.0
grow_horizontal = 2
grow_vertical = 2
text = "100"
label_settings = SubResource("LabelSettings_tm13j")
horizontal_alignment = 1
script = ExtResource("2_lv4u7")

[node name="TeleportTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="DotsTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5

[connection signal="timeout" from="DotsTimer" to="TeleportingLabelDots" method="_on_dots_timer_timeout"]
